orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client__c/Client__c.object-meta.xml
<CustomObject>
    <description>Agency clients (policyholders/buyers/sellers) - BlackRoad Agency CRM</description>
    <label>Client</label>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>