orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Policyholder</fullName><default>false</default><label>Policyholder</label></value>
            <value><fullName>Buyer</fullName><default>false</default><label>Buyer</label></value>
            <value><fullName>Seller</fullName><default>false</default><label>Seller</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Both</label></value>
            <value><fullName>Prospect</fullName><default>true</default><label>Prospect</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>