orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>