orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client__c/fields/Primary_Agent__c.field-meta.xml
<CustomField>
    <fullName>Primary_Agent__c</fullName>
    <label>Primary Agent</label>
    <type>Lookup</type>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
</CustomField>