orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Website</fullName><default>false</default><label>Website</label></value>
            <value><fullName>Walk-in</fullName><default>false</default><label>Walk-in</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
            <value><fullName>Open House</fullName><default>false</default><label>Open House</label></value>
            <value><fullName>Social Media</fullName><default>false</default><label>Social Media</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>