orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client__c/listViews/All_Clients.listView-meta.xml
<ListView>
    <fullName>All_Clients</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Clients</label>
</ListView>